--- a/src/App.css
+++ b/src/App.css
@@ -22,14 +22,15 @@ ul li{
   padding: 50px;
 }
 
+
+
 .myname{
   position: absolute;
-  top: 20px;
-  left:350px;
+  z-index: 6;
+  width: 100%;
   font-family: 'Parisienne', cursive;
   font-size: 45px;
   font-weight: bold;
-  color: white;
   text-shadow: 0px 3px 0px #b2a98f,
   0px 14px 10px rgba(0,0,0,0.15),
   0px 24px 2px rgba(0,0,0,0.1),
@@ -52,6 +53,7 @@ ul li{
   left: 350px;
   top:85px;
   color: black;
+  z-index: 6;
 }
 
 .clock{
@@ -1955,18 +1957,19 @@ iframe{
   }
 }
 
-/* iPhone 5/SE => 320 x 568 
-   iPad Touch => 320 x 568*/
+/* iPhone 5/SE => 320 x 568 # Vertical  done
+   iPad Touch => 320 x 568  # Verrical  done*/
 @media only screen and (min-width: 300px){
 
   .myname{
-   left: 920px;
+   top: 550px;
+   left: 530px;
   }
 
   .css-art p{
     font-size: 20px;
-    top: 45px;
-    left: 990px;
+    top: 580px;
+    left: 610px;
   }
 
   .floor{
@@ -1976,7 +1979,7 @@ iframe{
   }
 
   .postits{
-    left: -380px;
+    left: -410px;
     top:850px;
 
   }
@@ -2059,9 +2062,9 @@ iframe{
 
   .awssld, .bio-card, .contact-card{
     top: 950px;
-    left: 120px;
-    width: 345% !important; 
-    height: 195vh !important;
+    left: 90px;
+    width: 1100px !important; 
+    height: 1100px !important;
   }
  
   .bio-img-container img{
@@ -2083,33 +2086,36 @@ iframe{
 
 }
 
-/* Galaxy S5 => 360 x 640, 
-   Samsung Galaxy S9 / S9+ => 360 x 740,
-   Samsung Galaxy S8 / S8+ => 360 x 740  */
+/* Galaxy S5 => 360 x 640 # Vertical done, 
+   Samsung Galaxy S9 / S9+ => 360 x 740 # Vertical done,
+   Samsung Galaxy S8 / S8+ => 360 x 740 # Vertical done */
 @media only screen and (min-width: 350px){
 
   .floor{
-    width: 405%;
+    width: 350%;
   }
 
   .postits{
-    left: -300px;
+    left: -420px;
     top:850px;
   }
 
   .awssld, .bio-card, .contact-card{
     top: 940px;
-    left: 200px;
-    width: 306% !important; 
-    height: 175vh !important;
+    left: 80px;
+    height: 1120px !important;
   }
 }
 
-/* iPhone 6/7/8 => 375 x 667,
-   iPhone X => 375 x 712, 
-   iPhone XS => 375 x 812,
-   Galaxy s7 => 360 x 640 */
+/* iPhone 6/7/8 => 375 x 667 # Vertical done,
+   iPhone X => 375 x 812 # Vertical done, 
+   iPhone XS => 375 x 812 # Vertical done,
+   Galaxy s7 => 360 x 640  # Vertical done*/
 @media only screen and (min-width: 375px){
+
+  .myname{
+    left: 500px;
+  }
   .floor{
     width: 350%;
   }
@@ -2120,8 +2126,6 @@ iframe{
   .awssld, .bio-card, .contact-card{
     top: 950px;
     left: 100px;
-    width: 295% !important; 
-    height: 165vh !important;
   }
 
   iframe{
@@ -2129,51 +2133,45 @@ iframe{
   }
 }
 
-/* Pixel 2 => 411 x 731,
-   Pixel XL => 411 x 823,
-   iPhone 6/7/8 plus => 414 x 736,
-   iPhone XR => 414 x 896 */
-@media screen and (min-width: 400px){
+/* Pixel 2 => 411 x 731 # Vertical done,
+   Pixel XL => 411 x 823 # Vertical done */
+ @media screen and (min-width: 411px){
 
-  .floor{
-    width: 315%;
+    .floor{
+      width: 310%;
+    }
+  
+    .awssld, .bio-card, .contact-card{
+      top: 950px;
+      left: 90px;
+      width: 1115px !important;
+    }
   }
 
-  .postits{
-    left: -400px;
-    top: 950px;
+/* iPhone 6/7/8 plus => 414 x 736 # Vertical done,
+   iPhone XR => 414 x 896 # Vertical done */
+@media screen and (min-width: 414px){
+
+    .floor{
+      width: 310%;
+    }
+  
+    .awssld, .bio-card, .contact-card{
+      top: 950px;
+      left: 90px;
+    }
   }
 
-  .awssld, .bio-card, .contact-card{
-    top: 1050px;
-    left: 100px;
-    width: 275% !important; 
-    height: 135vh !important;
-  }
-
-  iframe{
-    height: 70vh;
-  }
-
-} 
-
-@media screen and (min-width: 410px){
-  .awssld, .bio-card, .contact-card{
-    top: 1050px;
-    left: 100px;
-    width: 275% !important; 
-    height: 160vh !important;
-  }
-}
-
+/* iPhone 5/SE => 568 x 320 # Horizontal done
+   iPad Touch =>  568 x 320 # Horizontal done*/
 @media only screen and (min-width: 500px){
 
   .myname{
-    left: 1000px;
+    left: 420px;
   }
 
   .css-art p{
-    left: 1070px;
+    left: 620px;
   }
 
   .floor{
@@ -2194,8 +2192,6 @@ iframe{
   .awssld, .bio-card, .contact-card{
     top: 950px;
     left: 165px;
-    width: 195% !important; 
-    height: 350vh !important;
   }
 
   iframe{
@@ -2203,7 +2199,14 @@ iframe{
   }
 } 
 
+/* Galaxy S5 => 640 x 360  # Horizontal done, 
+   Galaxy s7 => 640 x 360 # Horizontal done, 
+   iPhone 6/7/8 => 667 x 375 # Horizontal done*/
 @media only screen and (min-width: 600px){
+
+  .myname{
+    left: 380px;
+  }
   .floor{
     width: 220%;
   }
@@ -2211,8 +2214,6 @@ iframe{
   .awssld, .bio-card, .contact-card{
     top: 940px;
     left: 170px;
-    width: 175% !important; 
-    height: 310vh !important;
   }
 
   iframe{
@@ -2220,40 +2221,17 @@ iframe{
   }
 } 
 
-@media only screen and (min-width: 700px){
+/* Pixel 2 => 731 x 411 # Horizontal done, 
+   iPhone 6/7/8 plus => 736 x 414 # Horizontal done*/
+@media only screen and (min-width: 730px){
 
   .myname{
-    left: 750px;
+    left: 200px;
   }
 
   .css-art p{
-    left: 820px;
+    left: 470px;
   }
-
-  .floor{
-    width: 160%;
-    height: 40vh;
-  }
-
-  .postits{
-    left: -400px;
-    top: 730px;
-  }
-
-  .post-it-1:after, .post-it-2:after, .post-it-3:after , .post-it-4:after{
-    width: 500px;
-    height: 500px;
-  }
- 
-  .awssld, .bio-card, .contact-card{
-    top: 830px;
-    left: 100px;
-    width: 136% !important; 
-    height: 310vh !important;
-  }
-} 
-
- @media only screen and (min-width: 730px){
 
   .floor{
     width: 150%;
@@ -2340,9 +2318,9 @@ iframe{
 
   .awssld, .bio-card, .contact-card{
     top: 880px;
-    left: 120px;
-    width: 125% !important; 
-    height: 210vh !important;
+    left: 110px;
+    width: 915px !important; 
+    height: 900px !important; 
   }
  
   .bio-img-container img{
@@ -2362,14 +2340,13 @@ iframe{
     height: 80vh;
   }
 } 
-
+ /* Samsung Galaxy S8 / S8+ => 740 x 360 # Horizontal done,
+    Samsung Galaxy S9 / S9+ => 740 x 360 # Horizontal done*/
  @media only screen and (min-width: 740px){
 
   .awssld, .bio-card, .contact-card{
-    top: 750px;
-    left: 0px;
-    width: 150% !important; 
-    height: 280vh !important;
+    top: 850px;
+    left: 110px;
   }
  
   .bio-img-container img{
@@ -2392,15 +2369,22 @@ iframe{
   }
 } 
 
-/* iPad => 768 x 1024, 
-   iPad Mini => 768 x 1024,
-   iPad Air 1 & 2 => 768 x 1024 */
+/* iPad => 768 x 1024 # Vertical done, 
+   iPad Mini => 768 x 1024 # Vertical done,
+   iPad Air 1 & 2 => 768 x 1024  # Vertical done*/
  @media only screen and (min-width: 760px){
+
+  .css-art p{
+    left: 460px;
+  }
+   .floor{
+     width: 150%;
+   }
   .awssld, .bio-card, .contact-card{
     top: 875px;
     left: 120px;
-    width: 118% !important; 
-    height: 85vh !important;
+    /* width: 118% !important; 
+    height: 85vh !important; */
   }
  
   .bio-img-container img{
@@ -2422,16 +2406,15 @@ iframe{
   }
 } 
 
+/* Samsung Galaxy Tab 10 => 800x 1280 # Vertical done */
 @media only screen and (min-width: 800px){
   .floor{
     width: 150%;
   }
  
   .awssld, .bio-card, .contact-card{
-    top: 765px;
-    left: 0px;
-    width: 150% !important; 
-    height: 80vh !important;
+    top: 865px;
+    left: 110px;
   }
  
   .bio-img-container img{
@@ -2452,12 +2435,19 @@ iframe{
   }
 }
 
-@media only screen and (min-width: 811px){
+/* iPhone XS => 812 x 375 # Horizontal done,
+   iPhone X => 812 x 375 # Horizontal done, 
+   Pixel XL => 823 x 411 # Horizontal done*/
+@media only screen and (min-width: 812px){
+
+  .myname{
+   left: 140px;
+  }
   .awssld, .bio-card, .contact-card{
     top: 875px;
-    left: 95px;
-    width: 115% !important; 
-    height: 235vh !important;
+    left: 120px;
+    /* width: 115% !important; 
+    height: 235vh !important; */
   }
 
   iframe{
@@ -2465,58 +2455,45 @@ iframe{
   }
 }
 
-@media only screen and (min-width: 870px){
-
+/* iPhone XR => 896 x 414 # Horizontal done*/
+@media only screen and (min-width: 896px){
+  .myname{
+    left: 100px;
+  }
   .floor{
     width: 135%;
   }
   .awssld, .bio-card, .contact-card{
     top: 875px;
-    left: 95px;
-    width: 110% !important; 
-    height: 120vh !important;
+    left: 115px;
+    /* width: 110% !important; 
+    height: 210vh !important; */
   }
   iframe{
     height: 80vh;
   }
 }
-/* Samsung Galaxy Tab 10 => 800x 1280 */
- @media only screen and (min-width: 890px){
-  .floor{
-    width: 120%;
-  }
 
-  .postits{
-    left: -250px;
-  }
-  .awssld, .bio-card, .contact-card{
-    top: 875px;
-    left: 95px;
-    width: 105% !important; 
-    height: 210vh !important;
-  }
-  iframe{
-    height: 80vh;
-  }
-} 
-
-/* iPad Pro => 1024 x 1366 */
+/* iPad Pro => 1024 x 1366 # Vertical done, 
+   iPad Air 1 & 2 => 1024 x 768 # Horizontal*/
  @media only screen and (min-width: 1000px){
 
+  .myname{
+    left: 30px;
+  }
  .floor{
-   width: 110%;
+   width: 120%;
    height: 20vh;
  }
 
  .postits{
    top:750px;
+   left: -200px;
  }
 
 .awssld, .bio-card, .contact-card{
-  top: 850px;
-  left: 100px;
-  width: 90% !important; 
-  height: 115vh !important;
+  top: 840px;
+  left: 150px;
 }
 
 .bio-img-container img{
@@ -2540,67 +2517,26 @@ iframe{
 
 } 
 
-@media only screen and (min-width: 1200px){
-
-  .floor{
-    width: 100%;
-    height: 30vh;
+/* Samsung Galaxy Tab 10 => 1280 x 800 # Horizontal done*/
+@media  only screen and (min-width: 1280px){
+  .myname{
+    left: -95px;
+  }
+  .css-art p{
+    left:470px;
   }
 
+  .postits{
+    left: -120px;
+  }
   .window{
     left: 900px;
   }
-  
-  .postits{
-    left:-150px;
-    top:800px;
-  }
 
   .awssld, .bio-card, .contact-card{
-    top: 875px;
-    left: 195px;
-    width: 71% !important; 
-    height: 90vh !important;
-  }
-
-  .bio .text-container{
-    padding-top: 55px;
-    line-height: 40px;
-  }
-  
-  .bio-img-container img{
-    margin: 200px 80px;
-    width: 100%;
-   }
-  
-   .project-div{
-     padding-top: 5em;
-   }
-
-   .project-div .text-container{
-    padding: 0px 0 20px 60px;
-    line-height: 20px;
-  }
-
-  iframe{
-    height: 50vh;
-  }
-} 
-
-@media  only screen and (min-width: 1280px){
-
-  .myname{
-    left: 900px;
-  }
-
-  .css-art p{
-    left:970px;
-  }
-  .awssld, .bio-card, .contact-card{
-    top: 855px;
-    left: 0px;
-    width: 100% !important; 
-    height: 115vh !important;
+    top: 845px;
+    left: 150px;
+    width: 1200px !important; 
   }
 
   .bio-img-container img{
@@ -2608,30 +2544,16 @@ iframe{
   }
 }
 
-@media only screen and (min-width: 1226px){
+/* iPad Pro => 1366 x 1024 # Horizontal done */
+@media only screen and (min-width: 1336px){
+  .postits{
+    left: -100px;
+  }  
   .awssld, .bio-card, .contact-card{
-    top: 850px;
+    top: 820px;
     left: 0px;
-    width: 100% !important; 
-    height: 120vh !important;
-    
-  }
-}
-
-@media only screen and (min-width: 1366px){
-
-  .myname{
-    left: 900px;
-  }
-
-  .css-art p{
-    left:970px;
-  }
-  .awssld, .bio-card, .contact-card{
-    top: 850px;
-    left: 0px;
-    width: 100% !important; 
-    height: 100vh !important;
+    /* width: 100% !important; 
+    height: 100vh !important; */
     
   }
 
@@ -2648,39 +2570,7 @@ iframe{
   }
 }
 
-/* @media only screen and (min-height: 1000px){
-
- .assld, .bio-card, .contact-card{
-    top: 900px;
-    left: 180px;
-    width: 120% !important; 
-    height: 90vh !important;
-  }
- 
-  .bio-img-container img{
-    margin: 240px 100px;
-    width: 100%;
-   }
-  
-   .project-div{
-     padding-top: 5em;
-   }
-
-   .project-div .text-container{
-     padding-top: 10px;
-   }
-
-
-  .contact-div{
-    padding: 450px  100px;
-  }
-
-  iframe{
-    height: 40vh;
-  }
-}  */
-
-@media only screen and (min-height: 1300px){
+/* @media only screen and (min-height: 1300px){
 
   .floor{
     width: 105%;
@@ -2717,16 +2607,24 @@ iframe{
     height: 25vh;
   }
   
-} 
+}  */
 
-/* Apple Macbook Air 13-inch => 1440 x 900 */
+/* Apple Macbook Air 13-inch => 1440 x 900 done */
  @media only screen and (min-width: 1400px){
+  .myname{
+    left: -160px;
+  }
+  .css-art p{
+    left: 470px;
+  }
+
+  .postits{
+    left: 0px;
+  }
 
   .awssld, .bio-card, .contact-card{
-    top: 850px;
-    left: 0px;
-    width: 100% !important; 
-    height: 115vh !important;
+    top: 800px;
+    left: 300px;
   }
  
   .bio-img-container img{
@@ -2747,14 +2645,14 @@ iframe{
   }
 } 
 
-/* Del XPS 13 => 1920 x 1080*/
+/* Del XPS 13 => 1920 x 1080 done */
  @media only screen and (min-width: 1900px){
   .myname{
-    left: 1550px;
+    left: -400px;
   }
 
   .css-art p{
-    left:1620px;
+    left:480px;
   }
 
   .floor{
@@ -2794,10 +2692,8 @@ iframe{
     left: 1550px;
   }
   .awssld, .bio-card, .contact-card{
-    top: 110px;
-    left: 260px;
-    width: 75% !important; 
-    height: 80vh !important;
+    top: 80px;
+    left: 300px;
   }
 
   .bio .text-container{
@@ -2806,7 +2702,7 @@ iframe{
   }
   
   .bio-img-container img{
-    margin: 30px 100px;
+    margin: 130px 100px;
     width: 80%;
    }
   
@@ -2827,18 +2723,18 @@ iframe{
   }
 } 
 
-/* Apple Macbook Pro 15-inch => 2880 x 1800  */
- @media only screen and (min-width: 2200px){
-
+/* Apple Macbook 13-inch => 2560 x 1600 done*/
+ @media only screen and (min-width: 2500px){
+  
   .myname{
     font-size: 80px;
-    width: auto;
-    left: 400px;
+    left: -660px;
+    top: 1200px;
   }
 
   .css-art p{
     font-size: 30px;
-    top: 140px;
+    top: 1250px;
     left: 550px;
   }
   
@@ -2923,13 +2819,13 @@ iframe{
   .chair{
       width: 260px;
       height: 200px;
-      top: 950px;
+      top: 850px;
       left: 460px;
   }
 
   .girl{
     position: absolute;
-    top: -150px;
+    top: -250px;
     left: -535px;
   }
   
@@ -2991,6 +2887,13 @@ iframe{
     top: 740px;
     left: 1050px;
   }
+
+  .t-shirt:after{
+    left: 50px;
+  }
+  .t-shirt:before{
+    left: 130px;
+  }
   
   .computer{
       top: 1030px;
@@ -3000,12 +2903,12 @@ iframe{
   }
   
   .pencil-jar{
-      top: 1095px;
+      top: 995px;
       left: 850px;
   }
   
   .plant-div{
-      top: 950px;
+      top: 855px;
       left: 250px;
   }
   
@@ -3045,12 +2948,12 @@ iframe{
     left: 250px;
     width: 700px;
     height: 70px;
-    top: 1150px;
+    top: 1050px;
   }
   
   .table-front{
     left: 260px;
-    top: 1220px;
+    top: 1120px;
     width: 680px;
     height: 400px;
   }
@@ -3071,7 +2974,7 @@ iframe{
   }
   
   .garbage-can{
-      top: 1420px;
+      top: 1320px;
       left: 100px;
       width: 150px;
       height: 190px;
@@ -3171,7 +3074,7 @@ iframe{
   }
   
   .coffee{
-      top: 1095px;
+      top: 995px;
       left: 400px;
   }
   
@@ -3210,7 +3113,7 @@ iframe{
   
   .postits{
       top: 100px;
-      left: 600px;
+      left: 620px;
   }
   
   .postits p{
@@ -3233,14 +3136,14 @@ iframe{
   
   .window{
       top: 300px;
-      left: 1950px;
-      width: 800px;
+      left: 1900px;
+      width: 600px;
       height: 600px;
       border: 20px solid white;
   } 
   
   .curtain{
-      width: 780px;
+      width: 570px;
       height: 120px;
       
   }
@@ -3248,7 +3151,7 @@ iframe{
   .curtain:before{
     height: 100px;
      top: 120px;
-     left: 415px;
+     left: 275px;
      width: 10px;
     
   }
@@ -3257,7 +3160,7 @@ iframe{
      width: 20px;
      height: 20px;
      top: 210px;
-     left: 400px;
+     left: 260px;
      border: 10px solid #ff9801;
   }
   
@@ -3279,20 +3182,20 @@ iframe{
   }
   
   .stars ul li{
-      left: 100px;
+      left: 10px;
   }
   
   .stars ul li:nth-child(2){
-      left: 400px;
+      left: 120px;
   }
   
   .stars ul li:nth-child(3){
-      left: 500px;
+      left: 250px;
   }
   
   .stars ul li:nth-child(4){
-      top: 300px;
-      left: 600px;
+      top: 200px;
+      left: 300px;
   }
   
   .land, .land:after{
@@ -3302,7 +3205,7 @@ iframe{
   }
   
   .land:after{
-      width: 460px;
+      width: 260px;
       height: 200px;
       left: 300px;
   }
@@ -3314,21 +3217,21 @@ iframe{
   
   .tree ul li:nth-child(2){
       top:-60px;
-      left: 230px;
+      left: 190px;
   }
   
   .tree ul li:nth-child(3){
-      top:-70px;
-      left: 530px;
+      top:-50px;
+      left: 380px;
   }
   
   .tree ul li:nth-child(4){
       top:-70px;
-      left: 670px;
+      left: 470px;
   }
   
   .window-devide{
-      left: 400px;
+      left: 260px;
       height: 450px;
       width: 30px;
   }
@@ -3346,15 +3249,15 @@ iframe{
   
   .floor{
       top:1150px;
-      width: 100%;
+      width:120%;
       height:40%;
    }
 
    .awssld, .bio-card, .contact-card{
     top: 130px;
     left: 360px;
-    width: 75% !important; 
-    height: 80vh !important;
+    width: 2000px !important; 
+    height: 1400px !important; 
   }
 
   .bio .text-container{
@@ -3390,15 +3293,16 @@ iframe{
   }
 } 
 
-/* Apple Macbook 13-inch => 2560 x 1600 */
- @media only screen and (min-width: 2500px){  
+/* Apple Macbook Pro 15-inch => 2880 x 1800 done */
+ @media only screen and (min-width: 2800px){  
   
   .myname{
-    left: 2000px;
+    top: 1100px;
+    left: -840px;
   }
 
   .css-art p{
-    left:2200px;
+    top: 1150px;
   }
 
   .table{
@@ -3451,7 +3355,7 @@ iframe{
 
   .window{
       left: 1950px;
-      width: 600px;
+
   } 
   
   .curtain{
@@ -3526,8 +3430,8 @@ iframe{
    .awssld, .bio-card, .contact-card{
     top: 130px;
     left: 360px;
-    width: 75% !important; 
-    height: 90vh !important;
+    /* width: 75% !important; 
+    height: 90vh !important; */
   }
 
   .bio .text-container{
@@ -3563,15 +3467,17 @@ iframe{
    
 } 
 
-/* Apple iMac 27-inch => 5120 x 2880 */
+/* Apple iMac 27-inch => 5120 x 2880 done*/
  @media only screen and (min-width: 5000px){
 
   .myname{
-    left: 4380px;
+    left: -1420px;
+    top: 1450px;
   }
 
   .css-art p{
-    left:4580px;
+    top: 1520px;
+    left:1080px;
   }
 
 .month{
@@ -3734,8 +3640,8 @@ padding-top: 20px;
 .awssld, .bio-card, .contact-card{
   top: 180px;
   left: 360px;
-  width: 75% !important; 
-  height: 90vh !important;
+  width:3600px !important; 
+  height: 2500px !important;
 }
 
 .bio .text-container{
