--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,35 @@ ul li{
   padding: 50px;
 }
 
+.light-off{
+  background:  rgba(9,55,99, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120vh;
+  z-index: 9;
+}
+
+.light-on button, .light-off button {
+  position: absolute;
+  top: 20px;
+  left: 600px;
+  width: 100px;
+  height: 50px;
+  border-radius: 90px;
+  background: white;
+  font-weight: bold;
+  padding: 10px;
+  outline:none;
+}
+
+.light-off button{
+  top: 400px;
+  left: 900px;
+}
+
+
 .myname{
   position: absolute;
   z-index: 6;
@@ -192,8 +221,6 @@ ul li{
 }
 
 .bulb{
-  content: "";
-  display: inline-block;
   width: 50px;
   height: 20px;
   border-radius: 0 0 90px 90px;
@@ -205,6 +232,11 @@ ul li{
   -webkit-box-shadow: 1px 10px 34px 13px rgba(192,196,78,1);
 -moz-box-shadow: 1px 10px 34px 13px rgba(192,196,78,1);
 box-shadow: 1px 10px 34px 13px rgba(192,196,78,1);
+}
+
+#off{
+  display: none;
+  background: transparent;
 }
 
 .chair{
