--- a/src/App.css
+++ b/src/App.css
@@ -1887,13 +1887,64 @@ box-shadow: 0px 0px 5px 1px rgba(173,163,173,1);
   width: auto;
 }
 
-.project-div h2{
+.project-div h2, .project-div h3{
   margin: 10px auto;
 }
 
 .project-div ul{
  list-style: square;
 }
+
+.codepen{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.codepen-div{
+  width: 30%;
+  height:30vh;
+  max-height: 100%;
+  margin-right: 30px;
+  margin-top: 30px;
+}
+
+.codepen img{
+  width: 100%;
+  height:100%;
+  opacity: 1;
+}
+
+.codepen-div:hover img{
+  opacity: 0.3;
+  backface-visibility: hidden;
+  transition: .5s ease-in-out;
+}
+
+.codepen-div:hover .middle-spot{
+  opacity: 1;
+}
+
+
+.codepen .middle-spot {
+  position: relative;
+  top: -185px;
+  left: 110px;
+  opacity: 0;
+  width: 100px;
+  height: auto;
+  background: white;
+  padding: 10px;
+  border-radius: 15px;
+  transition: .5s ease-in-out;
+}
+
+.codepen a{
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+ 
+}
+
 
 .link-ul{
   padding: 10px;
@@ -1925,7 +1976,7 @@ box-shadow: 0px 0px 5px 1px rgba(173,163,173,1);
   line-height: 40px;
 }
 
-.text{
+.text, .project-div h3{
   font-style: italic;
   font-size: 20px;
   font-family: 'El Messiri', sans-serif;
