--- a/src/App.css
+++ b/src/App.css
@@ -3528,7 +3528,8 @@ iframe{
   .curtain{
       width: 570px;
       height: 120px;
-      
+      top: -560px;
+      animation: open-curtain-2500 3s linear;
   }
   
   .curtain:before{
