adds curtain-rope for min-width:2500px

--- a/src/App.css
+++ b/src/App.css
@@ -3541,6 +3541,12 @@ iframe{
     }
   }
 
+  .curtain-rope{
+    left: 275px;
+    top: 120px;
+    animation: move-up-rope-2500 3s linear;
+  }
+
   .moon{
       width: 100px;
       height: 100px;
