adds curtain-close for min-width:2500px

--- a/src/App.css
+++ b/src/App.css
@@ -3574,6 +3574,11 @@ iframe{
     }
   }
 
+  .curtain-close{
+    animation: close-the-curtain-2500 3s linear;
+    animation-fill-mode: forwards;
+  }
+
   .moon{
       width: 100px;
       height: 100px;
