adds move-down-curtain-rope-2500 animation to curtain-rope for min-width:2500px

--- a/src/App.css
+++ b/src/App.css
@@ -3585,6 +3585,11 @@ iframe{
     }
   }
 
+  .curtain-close .curtain-rope{
+    animation: move-down-curtain-rope-2500 3s linear;
+    animation-fill-mode: forwards;
+  }
+
   .moon{
       width: 100px;
       height: 100px;
