--- a/src/App.css
+++ b/src/App.css
@@ -3590,6 +3590,12 @@ iframe{
     animation-fill-mode: forwards;
   }
 
+  @keyframes move-down-curtain-rope-2500{
+    to{
+      top: 570px;
+    }
+  }
+
   .moon{
       width: 100px;
       height: 100px;
