adds move-down-curtain-handle-2500 animation for min-width:2500px

--- a/src/App.css
+++ b/src/App.css
@@ -3601,6 +3601,12 @@ iframe{
     animation-fill-mode: forwards;
   }
 
+  @keyframes move-down-curtain-handle-2500{
+    to{
+      top: 590px;
+    }
+  }
+
   .moon{
       width: 100px;
       height: 100px;
