adjust the position of curtain and deletes curtain:before and after for min-width:5000px

--- a/src/App.css
+++ b/src/App.css
@@ -4061,22 +4061,8 @@ padding-top: 20px;
 .curtain{
     width: 880px;
     height: 120px;
-}
-
-.curtain:before{
-   height: 100px;
-   top: 115px;
-   left: 445px;
-   width: 10px;
-  
-}
-
-.curtain:after{
-   width: 20px;
-   height: 20px;
-   top: 210px;
-   left: 430px;
-   border: 10px solid #ff9801;
+    top: -680px;
+    animation: open-curtain-5000 3s linear;
 }
 
 .land, .land:after{
