adds move-up-rope-5000 animation for min-width:5000px

--- a/src/App.css
+++ b/src/App.css
@@ -4081,6 +4081,15 @@ padding-top: 20px;
   animation: move-up-rope-5000 3s linear;
 }
 
+@keyframes move-up-rope-5000{
+  from {
+    top: 680px;
+  }
+  to {
+    top: 120px;
+  }
+}
+
 .land, .land:after{
     width: 420px;
 }
