--- a/src/App.css
+++ b/src/App.css
@@ -4090,6 +4090,15 @@ padding-top: 20px;
   }
 }
 
+.curtain-handle{
+  width: 60px;
+  height: 60px;
+  top:140px;
+  left: 420px;
+  border-width: 15px;
+  animation: move-up-curtain-handle-5000 3s linear;
+}
+
 .land, .land:after{
     width: 420px;
 }
