adds move-down-curtain-handle-5000 animation to curtain-handle for min-widt:5000px

--- a/src/App.css
+++ b/src/App.css
@@ -4118,6 +4118,10 @@ padding-top: 20px;
     height: 680px;
   }
 }
+.curtain-close .curtain-rope{
+  animation: move-down-curtain-rope-5000 3s linear;
+  animation-fill-mode: forwards;
+}
 
 .land, .land:after{
     width: 420px;
