adds move-down-curtain-handle-5000 animation to curtain-handle for min-widt:5000px

--- a/src/App.css
+++ b/src/App.css
@@ -4129,6 +4129,11 @@ padding-top: 20px;
   }
 }
 
+.curtain-close .curtain-handle{
+  animation: move-down-curtain-handle-5000 3s linear;
+  animation-fill-mode: forwards;
+}
+
 .land, .land:after{
     width: 420px;
 }
